# CodeShare

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Client  Makefile  MyQTextEdit.cpp  MyQTextEdit.h  NoteBook.ui  README.md  cmake_install.cmake  editorwindow.cpp  editorwindow.h  editorwindow.ui  json.hpp  main.cpp  myClient.cpp  myClient.h  tests.cpp
Client_autogen/: moc_predefs.h  mocs_compilation.cpp
Client_autogen/K6S233IZAZ/: moc_MyQTextEdit.cpp  moc_NoteBook.cpp  moc_myClient.cpp
headers/: CRDT.h  ClientConnector.h  ClientTextManager.h  File.h  Message.h  MyQTextEdit.h  NoteBook.h  RoomTextManager.h  Symbol.h  TextEditor.h  TextManager.h  crdt.h  jsonTypes.h  jsonUtility.h  message.h  myClient.h  symbol.h  ui_NoteBook.h
linters/: run.sh
linters/cppcheck/cfg/: wxwidgets.cfg
linters/cpplint/: CPPLINT.cfg  cpplint.py
project/headers/: Acceptor.hpp  ChatRoom.h  Client.h  ClientTextManager.h  Connection.h  Connection.hpp  ConnectionHandler.h  ConnectionManager.h  ConnectionManager.hpp  GUI.h  JsonUtility.h  MongoConnector.h  MsgContext.h  RequestHandler.h  RequestHandler.hpp  RoomManager.h  RoomScheduler.h  RoomScheduler.hpp  RoomTextBuilder.h  Server.h  Server.hpp  Symbol.h  TextBuilder.h  TextDiff.h  TextManager.h  User.h
project/src/: Acceptor.cpp  ChatRoom.cpp  Client.cpp  ClientTextManager.cpp  Connection.cpp  ConnectionHandler.cpp  ConnectionManager.cpp  GUI.cpp  JsonUtility.cpp  MongoConnector.cpp  MsgContext.cpp  RequestHandler.cpp  RoomScheduler.cpp  Server.cpp  Symbol.cpp  TextDiff.cpp  TextManager.cpp  User.cpp  main.cpp
project/tests/: CMakeLists.txt  mock_tests.cpp
project/tests/src/: main.cpp  test_classes_intefaces.cpp  test_interface.cpp
src/: CRDT.cpp  ClientConnector.cpp  ClientTextManager.cpp  File.cpp  Message.cpp  MyQTextEdit.cpp  NoteBook.cpp  NoteBook.ui  RoomTextManager.cpp  Symbol.cpp  TextDiff.cpp  TextEditor.cpp  TextManager.cpp  crdt.cpp  jsonTypes.cpp  jsonUtility.cpp  message.cpp  myClient.cpp  symbol.cpp
tests/: CMakeLists.txt  tests.cpp
